# 24puzzle

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  adapter.h  adapter.hpp  benchmark.xlsx  config.json  solver.cpp  solver.h  solver.hpp  template.yml  test.cpp
common/: CMakeLists.txt  adapter.hpp  solver.hpp
distributed_solver/: CMakeLists.txt  func.cpp
distributed_solver/aliyun/: template.yml
distributed_solver/aliyun/pure_cpp_worker/: CMakeLists.txt
distributed_solver/aliyun/python_cpp_worker/: CMakeLists.txt  aliyun_function_compute_shell.py
distributed_solver/aliyun_function_compute_worker/: CMakeLists.txt
distributed_solver/aliyun_function_compute_worker/src/: main.cpp
distributed_solver/aliyun_worker/: CMakeLists.txt  Dockerfile  index.py  template.yml  worker.cpp
distributed_solver/nodejs_cpp_worker/: CMakeLists.txt  worker.cpp
distributed_solver/pure_cpp_worker/: CMakeLists.txt  build.sh
distributed_solver/pure_cpp_worker/aliyun_function_compute_bin/: bootstrap
distributed_solver/pure_cpp_worker/sample/: CMakeLists.txt
distributed_solver/pure_cpp_worker/sample/src/handlers/: echo_handler.cpp
distributed_solver/pure_cpp_worker/src/: main.cpp
distributed_solver/python_cpp_worker/: CMakeLists.txt  aliyun_function_compute_shell.py  http_shell.py  worker.cpp
distributed_solver/scheduler/: CMakeLists.txt  async_http_client.h  async_http_client.hpp  func.cpp  main.cpp  scheduler.cpp  scheduler.py  scheduler2.py
distributed_solver/scheduler2/: CMakeLists.txt  main.cpp
distributed_solver/scheduler3/: CMakeLists.txt  func.cpp  index.py
distributed_solver_2/: CMakeLists.txt
distributed_solver_2/aliyun_function_compute_adapter/: index.py
distributed_solver_2/aliyun_function_compute_worker/: CMakeLists.txt
distributed_solver_2/cpp_http_worker/: CMakeLists.txt  main.cpp
distributed_solver_2/pure_cpp_worker/: CMakeLists.txt
distributed_solver_2/pure_cpp_worker/src/: CMakeLists.txt  main.cpp
distributed_solver_2/scheduler/: CMakeLists.txt  scheduler.cpp
multithreading_solver/: CMakeLists.txt  main.cpp  multithreading_solver3.py  multithreading_solver4.py
normal_solver/: CMakeLists.txt  main.cpp
serverless_solver/: CMakeLists.txt  common.h
serverless_solver/python_cpp_worker/: http_shell.py
serverless_solver/python_worker/: CMakeLists.txt  worker.cpp
serverless_solver/python_worker/aliyun/: index.py
serverless_solver/scheduler/: CMakeLists.txt  async_http_client.cpp  scheduler.cpp
serverless_solver/worker/: CMakeLists.txt  worker.cpp
serverless_solver/worker/aliyun_function_compute/: index.js  worker
serverless_solver/worker/common_http/: server.js
src/: CMakeLists.txt  build.py  common.py  distributed_solver_scheduler.py  distributed_solver_worker.py  multiprocessing_solver.py  multiprocessing_solver2.py  multiprocessing_solver3.py  multiprocessing_solver4.py  multithreading_solver.cpp  normal_solver.py  test.py
src/common/: CMakeLists.txt  adapter.hpp  python.cpp  solver.hpp
test/: build.py  build_all.py  build_and_run.py  common.py  test.py
test/benchmark/: easy.json
test/cases/: 0.json  1.json  2.json
test/cases/benchmark/: hard.json  normal.json
test/cases/unittest/: notSolvable.json
test/unittest/: finished.json  maxSteps.json
tests/: 0.json  1.json
